--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ComponentTemplateCore"]
 	path = ComponentTemplateCore
-url=https://pauljlotz@bitbucket.org/apeironengineering/componenttemplatecore_userevents.git
+url=https://bitbucket.org/apeironengineering/componenttemplatecore_userevents.git
