fixed .gitmodule file.

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://stash.lsstcorp.org/scm/ts/ts_sallv_exa.git
 [submodule "ss_sedspectrometer"]
 	path = ss_sedspectrometer
-	url = https://hsundararaman@stash.lsstcorp.org/scm/ts/ss_sedspectrometer.git
+	url = https://stash.lsstcorp.org/scm/ts/ss_sedspectrometer.git
