--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ss_sedspectrometer"]
 	path = ss_sedspectrometer
 	url = https://stash.lsstcorp.org/scm/ts/ss_sedspectrometer.git
+[submodule "ts_sallv_sedspectrometer"]
+	path = ts_sallv_sedspectrometer
+	url = https://stash.lsstcorp.org/scm/ts/ts_sallv_sedspectrometer.git
