--- a/builds/Application/ViewSEDSpectrometer.conf
+++ b/builds/Application/ViewSEDSpectrometer.conf
@@ -9,4 +9,6 @@ WebServer.TcpAccess="c+*"
 WebServer.ViAccess="+*"
 DebugServerEnabled=False
 DebugServerWaitOnLaunch=False
+xwmShellRect.Title=1x1+1+38
+xwmShellRect.NoTitle=0x0+0+0
 
