--- a/.gitmodules
+++ b/.gitmodules
@@ -6,10 +6,10 @@
 	url = https://stash.lsstcorp.org/scm/ts/ts_sallv_exa.git
 [submodule "ss_sedspectrometer"]
 	path = ss_sedspectrometer
-	url = https://stash.lsstcorp.org/scm/ts/ss_sedspectrometer.git
+	url = https://github.com/lsst-ts/ss_FiberSpectrometer.git
 [submodule "ts_sallv_sedspectrometer"]
 	path = ts_sallv_sedspectrometer
-	url = https://stash.lsstcorp.org/scm/ts/ts_sallv_sedspectrometer.git
+	url = https://github.com/lsst-ts/ts_sallv_FiberSpectrometer.git
 [submodule "common_labview_cfitsio"]
 	path = common_labview_cfitsio
-	url = https://stash.lsstcorp.org/scm/ts/common_labview_cfitsio.git
+	url = https://github.com/lsst-ts/common_labview_cfitsio.git
