--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/lsst-ts/common_labview_cfitsio.git
 [submodule "ComponentTemplateCore"]
 	path = ComponentTemplateCore
-	url = ../common_ct_coreuserevents.git
+	url = https://github.com/lsst-ts/common_ct_coreuserevents.git
