--- a/builds/Application/DLFiberSpectrograph.conf
+++ b/builds/Application/DLFiberSpectrograph.conf
@@ -9,4 +9,5 @@ WebServer.TcpAccess="c+*"
 WebServer.ViAccess="+*"
 DebugServerEnabled=False
 DebugServerWaitOnLaunch=False
+xwmShellRect.Title=10x10+10+45
 
